@@ -64,7 +64,8 @@ _Py_ANNOTATE_MEMORY_ORDER(const volatile void *address, _Py_memory_order order)
     case _Py_memory_order_seq_cst:
         _Py_ANNOTATE_HAPPENS_BEFORE(address);
         break;
-    default:
+    case _Py_memory_order_relaxed:
+    case _Py_memory_order_acquire:
         break;
     }
     switch(order) {
@@ -73,7 +74,8 @@ _Py_ANNOTATE_MEMORY_ORDER(const volatile void *address, _Py_memory_order order)
     case _Py_memory_order_seq_cst:
         _Py_ANNOTATE_HAPPENS_AFTER(address);
         break;
-    default:
+    case _Py_memory_order_relaxed:
+    case _Py_memory_order_release:
         break;
     }
 }
